--- a/viasus/catalogo/templates/catalogo.html
+++ b/viasus/catalogo/templates/catalogo.html
@@ -28,7 +28,7 @@
                         <button name="{{ product.codigo }}" type="button" class="btn btn-danger" onclick="decreaseQuantity(this)">-</button>
                         <input name="{{ product.codigo }}" id="{{ product.codigo }}" type="number" value="0" min="0">
                         <button name="{{ product.codigo }}" type="button" class="btn btn-success" onclick="increaseQuantity(this)">+</button>
-                        <a href="#" name="{{ product.codigo }}" type="button" class="btn btn-primary">Agregar al carro</a>
+                        <a href="{% url 'carro:agregar' product.id %}" name="{{ product.codigo }}" type="button" class="btn btn-primary">Agregar al carro</a>
                     </div>
                 </div>
             {% endfor %}
