--- a/viasus/catalogo/templates/catalogo.html
+++ b/viasus/catalogo/templates/catalogo.html
@@ -14,8 +14,9 @@
         <input type="text" name="busqueda" id="busqueda"/>
         <input class="btn btn-secondary" type="submit" value="Buscar" />
     </form>
-    <form action="pedidoprueba" method="post">
-        {% csrf_token %}
+    <a href="{% url 'carro:limpiar' %}" class="btn btn-secondary" type="button">Limpiar carro</a>
+    <!-- <form action="pedidoprueba" method="post"> -->
+        <!-- {% csrf_token %} -->
         <div class="container-fluid">
             {% for product in result %}
                 <div class="card" style="width:300px">
@@ -25,17 +26,20 @@
                         <span class="product-price">$ {{ product.precio }}</span>
                     </div>
                     <div name="div_de_cant">
-                        <button name="{{ product.codigo }}" type="button" class="btn btn-danger" onclick="decreaseQuantity(this)">-</button>
-                        <input name="{{ product.codigo }}" id="{{ product.codigo }}" type="number" value="0" min="0">
-                        <button name="{{ product.codigo }}" type="button" class="btn btn-success" onclick="increaseQuantity(this)">+</button>
-                        <a href="{% url 'carro:agregar' product.id %}" name="{{ product.codigo }}" type="button" class="btn btn-primary">Agregar al carro</a>
+                        <form action="{% url 'carro:agregar' product.id %}" method="post">
+                            {% csrf_token %}
+                            <button name="{{ product.codigo }}" type="button" class="btn btn-danger" onclick="decreaseQuantity(this)">-</button>
+                            <input name="{{ product.codigo }}" id="{{ product.codigo }}" type="number" value="0" min="0">
+                            <button name="{{ product.codigo }}" type="button" class="btn btn-success" onclick="increaseQuantity(this)">+</button>
+                            <input type="submit" class="btn btn-primary" value="Agregar al carro" />
+                        </form>
                     </div>
                 </div>
             {% endfor %}
         </div>
-        <label for="Enviar"></label>
-        <input class="btn btn-primary" type="submit" value="Ir al carro" />
-    </form>
+        <!-- <label for="Enviar"></label> -->
+        <!-- <input class="btn btn-primary" type="submit" value="Ir al carro" /> -->
+    <!-- </form> -->
     <!-- Repeat the above structure for other products -->
 
     <script>
