--- a/viasus/carro/templates/carro.html
+++ b/viasus/carro/templates/carro.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product List</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <style></style>
-
-</head>
-<body>
+{% extends "header_footer.html" %}
+{% block content %}
     <a href="{% url 'carro:limpiar' %}" class="btn btn-secondary" type="button">Limpiar carro</a>
-    <a href="{% url 'catalogo' %}" class="btn btn-secondary" type="button">Catalogo</a>
+    <a href="{% url 'catalogue' %}" class="btn btn-secondary" type="button">Catalogo</a>
     {% if request.session.carro.items %}
     <div class="container-fluid">
         <table class="table table-striped">
@@ -45,7 +36,24 @@
         <p>No hay nada en el carro</p>
     {% endif %}
 
-    <a href="#" type="button" class="btn btn-info">Confirmar</a>
-    <p>Total: ${{ total }} </p>
-</body>
-</html>
+    <p>Cliente: </p>
+    <form action="{% url 'index' %}" method="get">
+        <label for="browser">Choose your browser from the list:</label>
+        <input list="browsers" name="browser" id="browser">
+            <datalist id="browsers">
+                <option value="Edge">
+                <option value="Firefox">
+                <option value="Chrome">
+                <option value="Opera">
+                <option value="Safari">
+            </datalist>
+        <!-- <input type="submit"> -->
+        
+        {% if request.user.is_authenticated %}
+        <button type="submit" class="btn btn-info">Confirmar</button>
+        <p>Total: ${{ total }} </p>
+        {% else %}
+        <a type="button" class="btn disabled">Confirmar</a>
+        {% endif %}
+    </form>
+    {% endblock %}
