--- a/viasus/viasus/templates/header_footer.html
+++ b/viasus/viasus/templates/header_footer.html
@@ -5,26 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalogo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <style></style>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <!-- <link rel="icon" href="./favicon.png"> -->
 </head>
-
-<h1>Cicloviasus</h1>
-{% if user.is_authenticated %}
-    <p>Hola {{ user.username }}</p> &nbsp; &nbsp; <a href="{% url 'close' %}">Cerrar Sesion</a>
-{% else %}
-    <p>No autenticado</p>
-    <a href="{% url 'signin' %}">Registrarse</a> &nbsp; &nbsp; <a href="{% url 'login' %}">Ingresar</a>
-{% endif %}
-
-{% block content %}
-
-{% endblock %}
-
+<header>
+    {% load static %}
+    <h1 class="text-dark text-center">Cicloviasus</h1>
+    <!-- aca inicia copilot -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="{% static 'favicon.png' %}" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+            </div>
+        </div>
+    </nav>
+    <!-- aca termina copilot -->
+    <div class="text-end">
+    {% if user.is_authenticated %}
+        <p>Hola {{ user.username }}</p> &nbsp; &nbsp; <a href="{% url 'close' %}">Cerrar Sesion</a>
+    {% else %}
+        <p>No autenticado</p>
+        <a href="{% url 'signin' %}">Registrarse</a> &nbsp; &nbsp; <a href="{% url 'login' %}">Ingresar</a>
+    {% endif %}
+    </div>
+</header>
+<body class="ms-2 me-2"></body>
+    {% block content %}
+    {% endblock %}
+</body>
 <footer>
-
     <p>Espacio reservado para el footer</p>
-
 </footer>
 </html>
