--- a/viasus/catalogo/templates/catalogue.html
+++ b/viasus/catalogo/templates/catalogue.html
@@ -1,20 +1,14 @@
 {% extends "header_footer.html" %}
 {% block content %}
-<form action="" method="get">
-    <input class="form-control" type="text" name="busqueda" id="busqueda"/>
-    <input class="btn btn-secondary" type="submit" value="Buscar" />
-</form>
 <a href="{% url 'carro:limpiar' %}" class="btn btn-secondary" type="button">Limpiar carro</a>
 <div class="container mt-5">
     <div class="row">
         {% for product in result %}
             {% if product.activo == True %}
-            <!-- Tarjeta de producto -->
             <div class="col-md-4 mb-4">
                 <div class="card">
                     <img src="{{ product.imagen }}" class="card-img-top" alt="Producto">
                     <div class="card-body">
-                        <!-- <h5 class="card-title">{{ product.titulo }}</h5> -->
                         <p class="card-text">{{ product.titulo }}</p>
                         <p class="card-text">Precio: $ {{ product.precio }}</p>
                         <form action="{% url 'carro:agregar' product.id %}" method="post">
@@ -22,25 +16,24 @@
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <button name="{{ product.codigo }}" type="button" class="btn btn-danger" onclick="decreaseQuantity(this)">-</button>
-                                    <!-- <button class="btn btn-outline-secondary" type="button" id="decrease">-</button> -->
                                 </div>
-                                <!-- <input type="number" class="form-control" value="1" min="1" id="quantity"> -->
                                 <input class="form-control" name="{{ product.codigo }}" id="{{ product.codigo }}" type="number" value="0" min="0">
                                 <div class="input-group-append">
                                     <button name="{{ product.codigo }}" type="button" class="btn btn-success" onclick="increaseQuantity(this)">+</button>
-                                    <!-- <button class="btn btn-outline-secondary" type="button" id="increase">+</button> -->
                                 </div>
-                                <input type="submit" class="btn btn-primary" value="Agregar al carro" />
+                                <button type="submit" class="btn btn-primary">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                        <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"></path>
+                                    </svg>
+                                </button>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>            
-            <!-- Puedes agregar más tarjetas aquí -->
             {% endif %}
         {% endfor %}
     </div>
-    <a href="{% url 'carro:carro' %}" type="button" class="btn btn-info">Ir al carro</a>
 </div>                
    
 <script>
