same size for all cards and adding footer and background for home page

--- a/viasus/catalogo/templates/catalogue.html
+++ b/viasus/catalogo/templates/catalogue.html
@@ -5,7 +5,7 @@
     <div class="row">
         {% for product in result %}
             {% if product.activo == True %}
-            <div class="col-md-4 mb-4">
+            <div class="col-lg-4 mb-4 d-flex">
                 <div class="card">
                     <img src="{{ product.imagen }}" class="card-img-top" alt="Producto">
                     <div class="card-body">
