--- a/viasus/viasus/templates/header_footer.html
+++ b/viasus/viasus/templates/header_footer.html
@@ -59,6 +59,7 @@
     {% endblock %}
 </body>
 <footer>
-    <p>Espacio reservado para el footer</p>
+    <!-- <p>Espacio reservado para el footer</p> -->
+    <img src="{% static 'footer.jpg' %}" alt="Contacto" >
 </footer>
 </html>
