--- a/viasus/viasus/templates/home.html
+++ b/viasus/viasus/templates/home.html
@@ -1,4 +1,7 @@
 {% extends "header_footer.html" %}
 {% block content %}
-    <h4>Bienvenido a la pagina de Inicio</h4>
+    <div class="col-md-10">
+        <img src="https://wallpapercave.com/wp/wp2149623.jpg" alt="Background Image" class="img-fluid">
+        <h4 class="carousel-caption">Bienvenido a la pagina de Inicio</h4>
+    </div>
 {% endblock %}
