--- a/viasus/viasus/templates/home.html
+++ b/viasus/viasus/templates/home.html
@@ -1,7 +1,9 @@
 {% extends "header_footer.html" %}
 {% block content %}
-    <div class="col-md-10">
-        <img src="https://wallpapercave.com/wp/wp2149623.jpg" alt="Background Image" class="img-fluid">
-        <h4 class="carousel-caption">Bienvenido a la pagina de Inicio</h4>
+    <div class="container">
+        <div class="col-md-10">
+            <img src="https://wallpapercave.com/wp/wp2149623.jpg" alt="Background Image" class="img-fluid">
+            <h4 class="carousel-caption text-secondary-emphasis">BIENVENIDO A LA PAGINA DE INICIO</h4>
+        </div>
     </div>
 {% endblock %}
