--- a/viasus/catalogo/templates/catalogue.html
+++ b/viasus/catalogo/templates/catalogue.html
@@ -1,6 +1,6 @@
 {% extends "header_footer.html" %}
 {% block content %}
-<a href="{% url 'carro:limpiar' %}" class="btn btn-secondary" type="button">Limpiar carro</a>
+<!-- <a href="{% url 'carro:limpiar' %}" class="btn btn-secondary" type="button">Limpiar carro</a> -->
 <div class="container mt-5">
     <div class="row">
         {% for product in result %}
