--- a/viasus/viasus/templates/header_footer.html
+++ b/viasus/viasus/templates/header_footer.html
@@ -109,4 +109,14 @@
         </a>
 </div>
 </footer>
+<script>
+    function calculateToday() {
+        let today = new Date();
+        let dd = String(today.getDate()).padStart(2, '0');
+        let mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+        let yyyy = today.getFullYear();
+        today = yyyy + '-' + mm + '-' + dd;
+        return today;
+    }
+</script>
 </html>
