arrange cron to schedule query joining different tables

--- a/viasus/viasus/templates/header_footer.html
+++ b/viasus/viasus/templates/header_footer.html
@@ -109,7 +109,7 @@
         </a>
 </div>
 </footer>
-<script>
+<!-- <script>
     function calculateToday() {
         let today = new Date();
         let dd = String(today.getDate()).padStart(2, '0');
@@ -118,5 +118,5 @@
         today = yyyy + '-' + mm + '-' + dd;
         return today;
     }
-</script>
+</script> -->
 </html>
