changing styles html bootstrap

--- a/viasus/viasus/templates/home.html
+++ b/viasus/viasus/templates/home.html
@@ -1,9 +1,9 @@
 {% extends "header_footer.html" %}
 {% block content %}
-    <div class="container">
-        <div class="col-md-10">
+    <div class="container-fluid">
+        <div class="justify-content-center">
             <img src="https://wallpapercave.com/wp/wp2149623.jpg" alt="Background Image" class="img-fluid">
-            <h4 class="carousel-caption text-secondary-emphasis">BIENVENIDO A LA PAGINA DE INICIO</h4>
+            <h4 class="text-secondary-emphasis">BIENVENIDO A LA PAGINA DE INICIO</h4>
         </div>
     </div>
 {% endblock %}
