--- a/viasus/viasus/templates/home.html
+++ b/viasus/viasus/templates/home.html
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="justify-content-center">
             <img src="https://wallpapercave.com/wp/wp2149623.jpg" alt="Background Image" class="img-fluid">
-            <h4 class="text-secondary-emphasis">BIENVENIDO A LA PAGINA DE INICIO</h4>
+            <h4 class="text-secondary-emphasis pb-0">BIENVENIDO A LA PAGINA DE INICIO</h4>
         </div>
     </div>
 {% endblock %}
