--- a/viasus/viasus/templates/header_footer.html
+++ b/viasus/viasus/templates/header_footer.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href="{% url 'carro:carro' %}">Carro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca</a>
+                        <a class="nav-link" href="{% url 'about' %}">Acerca</a>
                     </li>
                 </ul>
                 <div class="container-fluid">
