--- a/viasus/carro/templates/checkout.html
+++ b/viasus/carro/templates/checkout.html
@@ -1,4 +1,6 @@
 {% extends "header_footer.html" %}
 {% block content %}
-    <h4>Pedido guardado exitosamente</h4>
+    <div class="container-fluid mt-5">
+        <h4>Pedido guardado exitosamente</h4>
+    </div>
 {% endblock %}
